--- a/Project.inform/Index/Details/7_A.html
+++ b/Project.inform/Index/Details/7_A.html
@@ -228,6 +228,9 @@ thing gone with - <i>object</i><br>
 <p class="hangingin2">instead of&nbsp;&nbsp;&nbsp;&nbsp;<i>going south in Mer City</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line1711"><img border=0 src=inform:/Reveal.tif></a></p>
 <p class="hangingin2">instead of&nbsp;&nbsp;&nbsp;&nbsp;<i>going north in Empty Room</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line1751"><img border=0 src=inform:/Reveal.tif></a></p>
 <p class="hangingin2">instead of&nbsp;&nbsp;&nbsp;&nbsp;<i>going north in Portal Chamber</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line1944"><img border=0 src=inform:/Reveal.tif></a></p>
+<p class="hangingin2">instead of&nbsp;&nbsp;&nbsp;&nbsp;<i>going south in Bathroom</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line2264"><img border=0 src=inform:/Reveal.tif></a></p>
+<p class="hangingin2">instead of&nbsp;&nbsp;&nbsp;&nbsp;<i>going southeast in kitchen</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line2282"><img border=0 src=inform:/Reveal.tif></a></p>
+<p class="hangingin2">instead of&nbsp;&nbsp;&nbsp;&nbsp;<i>going southeast in kitchen</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line2297"><img border=0 src=inform:/Reveal.tif></a></p>
 <p class="hangingin2">instead of&nbsp;&nbsp;&nbsp;&nbsp;<i>going from Dark Places when flashlight is switched off</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line167"><img border=0 src=inform:/Reveal.tif></a></p>
 <p class="hangingin2">instead of&nbsp;&nbsp;&nbsp;&nbsp;<i>going from Dark Places when candle is switched on</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line173"><img border=0 src=inform:/Reveal.tif></a></p>
 <p class="hangingin2">instead of&nbsp;&nbsp;&nbsp;&nbsp;<i>going south to Stone Valley Pass4</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line1425"><img border=0 src=inform:/Reveal.tif></a></p>
