--- a/Project.inform/Index/Details/30_A.html
+++ b/Project.inform/Index/Details/30_A.html
@@ -226,6 +226,12 @@ ANSWER 12375 when Daphne (say) has asked a question.<p><hr><p><b>Typed commands 
 <p class="hangingin2">instead of&nbsp;&nbsp;&nbsp;&nbsp;<i>answering sphinx that "key"</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line1543"><img border=0 src=inform:/Reveal.tif></a></p>
 <p class="hangingin2">instead of&nbsp;&nbsp;&nbsp;&nbsp;<i>answering sphinx that "mirror"</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line1547"><img border=0 src=inform:/Reveal.tif></a></p>
 <p class="hangingin2">instead of&nbsp;&nbsp;&nbsp;&nbsp;<i>answering sphinx that "a mirror"</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line1550"><img border=0 src=inform:/Reveal.tif></a></p>
+<p class="hangingin2">instead of&nbsp;&nbsp;&nbsp;&nbsp;<i>answering Jeweler that "white gold"</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line1992"><img border=0 src=inform:/Reveal.tif></a></p>
+<p class="hangingin2">instead of&nbsp;&nbsp;&nbsp;&nbsp;<i>answering Jeweler that "yellow gold"</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line1996"><img border=0 src=inform:/Reveal.tif></a></p>
+<p class="hangingin2">instead of&nbsp;&nbsp;&nbsp;&nbsp;<i>answering Jeweler that "platinum"</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line2000"><img border=0 src=inform:/Reveal.tif></a></p>
+<p class="hangingin2">instead of&nbsp;&nbsp;&nbsp;&nbsp;<i>answering Jeweler that "solitaire"</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line2005"><img border=0 src=inform:/Reveal.tif></a></p>
+<p class="hangingin2">instead of&nbsp;&nbsp;&nbsp;&nbsp;<i>answering Jeweler that "three-stone"</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line2009"><img border=0 src=inform:/Reveal.tif></a></p>
+<p class="hangingin2">instead of&nbsp;&nbsp;&nbsp;&nbsp;<i>answering Jeweler that "split-shank"</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line2013"><img border=0 src=inform:/Reveal.tif></a></p>
 <br><p class="hangingin2">report&nbsp;&nbsp;&nbsp;&nbsp;<i>an actor answering something that</i>&nbsp;&nbsp;<font color="#800000">block answering rule</font>&nbsp;&nbsp;<a href="javascript:pasteCode('block answering rule')"><img border=0 src=inform:/doc_images/paste.png></a>&nbsp;<i>name</i> <a href="javascript:pasteCode('The block answering rule is not listed in the report answering it that rulebook.[=0x000A=]')"><img border=0 src=inform:/doc_images/paste.png></a>&nbsp;<i>unlist</i></p>
 <br><p>
 <!--CONTENT ENDS-->
