--- a/Project.inform/Index/Details/30_A.html
+++ b/Project.inform/Index/Details/30_A.html
@@ -218,20 +218,48 @@ HEAVENS - or anything else not making sense as a command - the action
 'answering Daphne that ...' will be generated.<br><br>The name of the action arises because it is also caused by typing, say,
 ANSWER 12375 when Daphne (say) has asked a question.<p><hr><p><b>Typed commands leading to this action</b><p>
 <p class="hangingin2">&quot;answer [text] to [someone]&quot; <i>reversed</i></p><p><b>Rules controlling this action</b><p>
-<p class="hangingin2">instead of&nbsp;&nbsp;&nbsp;&nbsp;<i>answering sphinx that "fire"</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line1527"><img border=0 src=inform:/Reveal.tif></a></p>
-<p class="hangingin2">instead of&nbsp;&nbsp;&nbsp;&nbsp;<i>answering sphinx that "flame"</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line1530"><img border=0 src=inform:/Reveal.tif></a></p>
-<p class="hangingin2">instead of&nbsp;&nbsp;&nbsp;&nbsp;<i>answering sphinx that "a flame"</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line1533"><img border=0 src=inform:/Reveal.tif></a></p>
-<p class="hangingin2">instead of&nbsp;&nbsp;&nbsp;&nbsp;<i>answering sphinx that "a fire"</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line1536"><img border=0 src=inform:/Reveal.tif></a></p>
-<p class="hangingin2">instead of&nbsp;&nbsp;&nbsp;&nbsp;<i>answering sphinx that "a key"</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line1540"><img border=0 src=inform:/Reveal.tif></a></p>
-<p class="hangingin2">instead of&nbsp;&nbsp;&nbsp;&nbsp;<i>answering sphinx that "key"</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line1543"><img border=0 src=inform:/Reveal.tif></a></p>
-<p class="hangingin2">instead of&nbsp;&nbsp;&nbsp;&nbsp;<i>answering sphinx that "mirror"</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line1547"><img border=0 src=inform:/Reveal.tif></a></p>
-<p class="hangingin2">instead of&nbsp;&nbsp;&nbsp;&nbsp;<i>answering sphinx that "a mirror"</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line1550"><img border=0 src=inform:/Reveal.tif></a></p>
-<p class="hangingin2">instead of&nbsp;&nbsp;&nbsp;&nbsp;<i>answering Jeweler that "white gold"</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line1992"><img border=0 src=inform:/Reveal.tif></a></p>
-<p class="hangingin2">instead of&nbsp;&nbsp;&nbsp;&nbsp;<i>answering Jeweler that "yellow gold"</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line1996"><img border=0 src=inform:/Reveal.tif></a></p>
-<p class="hangingin2">instead of&nbsp;&nbsp;&nbsp;&nbsp;<i>answering Jeweler that "platinum"</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line2000"><img border=0 src=inform:/Reveal.tif></a></p>
-<p class="hangingin2">instead of&nbsp;&nbsp;&nbsp;&nbsp;<i>answering Jeweler that "solitaire"</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line2005"><img border=0 src=inform:/Reveal.tif></a></p>
-<p class="hangingin2">instead of&nbsp;&nbsp;&nbsp;&nbsp;<i>answering Jeweler that "three-stone"</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line2009"><img border=0 src=inform:/Reveal.tif></a></p>
-<p class="hangingin2">instead of&nbsp;&nbsp;&nbsp;&nbsp;<i>answering Jeweler that "split-shank"</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line2013"><img border=0 src=inform:/Reveal.tif></a></p>
+<p class="hangingin2">instead of&nbsp;&nbsp;&nbsp;&nbsp;<i>answering sphinx that "fire"</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line1659"><img border=0 src=inform:/Reveal.tif></a></p>
+<p class="hangingin2">instead of&nbsp;&nbsp;&nbsp;&nbsp;<i>answering sphinx that "flame"</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line1664"><img border=0 src=inform:/Reveal.tif></a></p>
+<p class="hangingin2">instead of&nbsp;&nbsp;&nbsp;&nbsp;<i>answering sphinx that "a flame"</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line1669"><img border=0 src=inform:/Reveal.tif></a></p>
+<p class="hangingin2">instead of&nbsp;&nbsp;&nbsp;&nbsp;<i>answering sphinx that "a fire"</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line1674"><img border=0 src=inform:/Reveal.tif></a></p>
+<p class="hangingin2">instead of&nbsp;&nbsp;&nbsp;&nbsp;<i>answering sphinx that "a key"</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line1680"><img border=0 src=inform:/Reveal.tif></a></p>
+<p class="hangingin2">instead of&nbsp;&nbsp;&nbsp;&nbsp;<i>answering sphinx that "key"</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line1685"><img border=0 src=inform:/Reveal.tif></a></p>
+<p class="hangingin2">instead of&nbsp;&nbsp;&nbsp;&nbsp;<i>answering sphinx that "mirror"</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line1691"><img border=0 src=inform:/Reveal.tif></a></p>
+<p class="hangingin2">instead of&nbsp;&nbsp;&nbsp;&nbsp;<i>answering sphinx that "a mirror"</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line1696"><img border=0 src=inform:/Reveal.tif></a></p>
+<p class="hangingin2">instead of&nbsp;&nbsp;&nbsp;&nbsp;<i>answering Jeweler that "white gold"</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line2181"><img border=0 src=inform:/Reveal.tif></a></p>
+<p class="hangingin2">instead of&nbsp;&nbsp;&nbsp;&nbsp;<i>answering Jeweler that "yellow gold"</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line2186"><img border=0 src=inform:/Reveal.tif></a></p>
+<p class="hangingin2">instead of&nbsp;&nbsp;&nbsp;&nbsp;<i>answering Jeweler that "platinum"</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line2191"><img border=0 src=inform:/Reveal.tif></a></p>
+<p class="hangingin2">instead of&nbsp;&nbsp;&nbsp;&nbsp;<i>answering Jeweler that "solitaire"</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line2197"><img border=0 src=inform:/Reveal.tif></a></p>
+<p class="hangingin2">instead of&nbsp;&nbsp;&nbsp;&nbsp;<i>answering Jeweler that "three-stone"</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line2202"><img border=0 src=inform:/Reveal.tif></a></p>
+<p class="hangingin2">instead of&nbsp;&nbsp;&nbsp;&nbsp;<i>answering Jeweler that "split-shank"</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line2207"><img border=0 src=inform:/Reveal.tif></a></p>
+<p class="hangingin2">instead of&nbsp;&nbsp;&nbsp;&nbsp;<i>answering Store Clerk that "siberian husky"</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line2685"><img border=0 src=inform:/Reveal.tif></a></p>
+<p class="hangingin2">instead of&nbsp;&nbsp;&nbsp;&nbsp;<i>answering Store Clerk that "husky"</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line2690"><img border=0 src=inform:/Reveal.tif></a></p>
+<p class="hangingin2">instead of&nbsp;&nbsp;&nbsp;&nbsp;<i>answering Store Clerk that "german shepherd"</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line2695"><img border=0 src=inform:/Reveal.tif></a></p>
+<p class="hangingin2">instead of&nbsp;&nbsp;&nbsp;&nbsp;<i>answering Store Clerk that "shepherd"</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line2700"><img border=0 src=inform:/Reveal.tif></a></p>
+<p class="hangingin2">instead of&nbsp;&nbsp;&nbsp;&nbsp;<i>answering Store Clerk that "golden retriever"</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line2705"><img border=0 src=inform:/Reveal.tif></a></p>
+<p class="hangingin2">instead of&nbsp;&nbsp;&nbsp;&nbsp;<i>answering Store Clerk that "retriever"</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line2710"><img border=0 src=inform:/Reveal.tif></a></p>
+<p class="hangingin2">instead of&nbsp;&nbsp;&nbsp;&nbsp;<i>answering Store Clerk that "weimaraner"</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line2715"><img border=0 src=inform:/Reveal.tif></a></p>
+<p class="hangingin2">instead of&nbsp;&nbsp;&nbsp;&nbsp;<i>answering Nolan that "pan seared salmon"</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line3163"><img border=0 src=inform:/Reveal.tif></a></p>
+<p class="hangingin2">instead of&nbsp;&nbsp;&nbsp;&nbsp;<i>answering Nolan that "salmon"</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line3171"><img border=0 src=inform:/Reveal.tif></a></p>
+<p class="hangingin2">instead of&nbsp;&nbsp;&nbsp;&nbsp;<i>answering Nolan that "cioppini"</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line3179"><img border=0 src=inform:/Reveal.tif></a></p>
+<p class="hangingin2">instead of&nbsp;&nbsp;&nbsp;&nbsp;<i>answering Nolan that "mussels arrabiata"</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line3187"><img border=0 src=inform:/Reveal.tif></a></p>
+<p class="hangingin2">instead of&nbsp;&nbsp;&nbsp;&nbsp;<i>answering Nolan that "arrabiata"</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line3195"><img border=0 src=inform:/Reveal.tif></a></p>
+<p class="hangingin2">instead of&nbsp;&nbsp;&nbsp;&nbsp;<i>answering Nolan that "mussels"</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line3203"><img border=0 src=inform:/Reveal.tif></a></p>
+<p class="hangingin2">instead of&nbsp;&nbsp;&nbsp;&nbsp;<i>answering Nolan that "lobster tail"</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line3211"><img border=0 src=inform:/Reveal.tif></a></p>
+<p class="hangingin2">instead of&nbsp;&nbsp;&nbsp;&nbsp;<i>answering Nolan that "lobster"</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line3219"><img border=0 src=inform:/Reveal.tif></a></p>
+<p class="hangingin2">instead of&nbsp;&nbsp;&nbsp;&nbsp;<i>answering Nolan that "pappardelle a la salsiccia"</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line3227"><img border=0 src=inform:/Reveal.tif></a></p>
+<p class="hangingin2">instead of&nbsp;&nbsp;&nbsp;&nbsp;<i>answering Nolan that "pappardelle"</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line3235"><img border=0 src=inform:/Reveal.tif></a></p>
+<p class="hangingin2">instead of&nbsp;&nbsp;&nbsp;&nbsp;<i>answering Nolan that "salsiccia"</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line3243"><img border=0 src=inform:/Reveal.tif></a></p>
+<p class="hangingin2">instead of&nbsp;&nbsp;&nbsp;&nbsp;<i>answering Nolan that "citrus-glazed pork chops"</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line3251"><img border=0 src=inform:/Reveal.tif></a></p>
+<p class="hangingin2">instead of&nbsp;&nbsp;&nbsp;&nbsp;<i>answering Nolan that "citrus glazed pork chops"</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line3259"><img border=0 src=inform:/Reveal.tif></a></p>
+<p class="hangingin2">instead of&nbsp;&nbsp;&nbsp;&nbsp;<i>answering Nolan that "pork chops"</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line3267"><img border=0 src=inform:/Reveal.tif></a></p>
+<p class="hangingin2">instead of&nbsp;&nbsp;&nbsp;&nbsp;<i>answering Nolan that "franciscan estate"</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line3276"><img border=0 src=inform:/Reveal.tif></a></p>
+<p class="hangingin2">instead of&nbsp;&nbsp;&nbsp;&nbsp;<i>answering Nolan that "montasolo"</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line3284"><img border=0 src=inform:/Reveal.tif></a></p>
+<p class="hangingin2">instead of&nbsp;&nbsp;&nbsp;&nbsp;<i>answering Nolan that "rex goliath"</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line3291"><img border=0 src=inform:/Reveal.tif></a></p>
+<p class="hangingin2">instead of&nbsp;&nbsp;&nbsp;&nbsp;<i>answering Nolan that "goliath"</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line3298"><img border=0 src=inform:/Reveal.tif></a></p>
+<p class="hangingin2">instead of&nbsp;&nbsp;&nbsp;&nbsp;<i>answering Nolan that "ravenswood"</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line3305"><img border=0 src=inform:/Reveal.tif></a></p>
+<p class="hangingin2">instead of&nbsp;&nbsp;&nbsp;&nbsp;<i>answering Nolan that "black stallion"</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line3312"><img border=0 src=inform:/Reveal.tif></a></p>
+<p class="hangingin2">instead of&nbsp;&nbsp;&nbsp;&nbsp;<i>answering Nolan that "stallion"</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line3319"><img border=0 src=inform:/Reveal.tif></a></p>
 <br><p class="hangingin2">report&nbsp;&nbsp;&nbsp;&nbsp;<i>an actor answering something that</i>&nbsp;&nbsp;<font color="#800000">block answering rule</font>&nbsp;&nbsp;<a href="javascript:pasteCode('block answering rule')"><img border=0 src=inform:/doc_images/paste.png></a>&nbsp;<i>name</i> <a href="javascript:pasteCode('The block answering rule is not listed in the report answering it that rulebook.[=0x000A=]')"><img border=0 src=inform:/doc_images/paste.png></a>&nbsp;<i>unlist</i></p>
 <br><p>
 <!--CONTENT ENDS-->
